--- a/kettle-integration/core/pom.xml
+++ b/kettle-integration/core/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-data-profiling-kettle-integration</artifactId>
-    <version>8.0-SNAPSHOT</version>
+    <version>8.0.0.1-39</version>
   </parent>
   <artifactId>pentaho-data-profiling-kettle-integration-core</artifactId>
-  <version>8.0-SNAPSHOT</version>
+  <version>8.0.0.1-39</version>
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
