--- a/api/json/pom.xml
+++ b/api/json/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-data-profiling-api</artifactId>
-    <version>8.1-SNAPSHOT</version>
+    <version>8.1.0.0-81</version>
   </parent>
   <artifactId>pentaho-data-profiling-api-json</artifactId>
-  <version>8.1-SNAPSHOT</version>
+  <version>8.1.0.0-81</version>
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
