--- a/kettle-integration/pom.xml
+++ b/kettle-integration/pom.xml
@@ -5,16 +5,16 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-data-profiling-ce-bundles</artifactId>
-    <version>8.1-SNAPSHOT</version>
+    <version>8.1.0.0-81</version>
   </parent>
   <artifactId>pentaho-data-profiling-kettle-integration</artifactId>
-  <version>8.1-SNAPSHOT</version>
+  <version>8.1.0.0-81</version>
   <packaging>pom</packaging>
   <modules>
     <module>core</module>
   </modules>
   <properties>
-    <dependency.pentaho-osgi-bundles.revision>8.1-SNAPSHOT</dependency.pentaho-osgi-bundles.revision>
+    <dependency.pentaho-osgi-bundles.revision>8.1.0.0-81</dependency.pentaho-osgi-bundles.revision>
   </properties>
   <dependencies>
     <dependency>
